# angaa

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/angaa/: client.py
src/angaa/entities/: message.py  message_type.py
src/angaa/resources/: chat.py  completions.py
