[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__version__.py"

[project]
name = "angaa-ai"
dynamic = ["version"]

requires-python = ">=3.9"
authors = [
  { name="Raymond Maugé", email="rmauge@gmail.com" },
]
description = "An open alternative to the Open AI SDK"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rmauge/angaa"
Issues = "https://github.com/rmauge/angaa/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/angaa"]